--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 
 <html lang="es">
 	<head>
+		<script>
+			var x = document.cookie;
+
+			
+
+			prompt(x);
+			
+		</script>
 		<!-- Meta -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
