--- a/www/inicio.html
+++ b/www/inicio.html
@@ -79,14 +79,18 @@
 			<div id="owl-main">
 			<div class="container inner">
 				<div class="row inner-top-md">
-					<h2>Inicia sesión</h2>
-			    	<form action="login.php" method="post">
-			      	<p>Username:
-			        <input type="text" name="username" value="" /></p>
-			      	<p>Password:
-			        <input type="password" name="password" value="" /></p>
-			      	<input type="submit" name="submit" value="Submit" />
-			      	</form>
+				<h2>Login</h2>
+				    <form action="login_encriptado.php" method="post">
+				      <p>Username:
+				        <input type="text" name="usuario" value="" />
+				      </p>
+				      <p>Password:
+				        <input type="password" name="password" value="" />
+				      </p>
+				      <input type="submit" name="submit" value="Submit" />
+				    </form>
+				    
+				<a href="registro.html" > Registrarse</a>
 				</div><!-- /.row -->
 			</div><!-- /.container -->
 		</div>
