Modificaciones 11 de junio v1

--- a/www/productos.html
+++ b/www/productos.html
@@ -33,13 +33,6 @@
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="assets/images/favicon.ico">
 
-
-		
-		<!-- HTML5 elements and media queries Support for IE8 : HTML5 shim and Respond.js -->
-		<!--[if lt IE 9]>
-			<script src="assets/js/html5shiv.js"></script>
-			<script src="assets/js/respond.min.js"></script>
-		<![endif]-->
 	</head>
 	
 	<body>
@@ -216,7 +209,7 @@
 		<script src="assets/js/google.maps.api.v3.js"></script>
 		<script src="assets/js/viewport-units-buggyfill.js"></script>
 		<script src="assets/js/scripts.js"></script>
-		<script src="pruebascript.js"></script>
+		<script src="js/pruebascript.js"></script>
 
 
 		
