--- a/www/registro.html
+++ b/www/registro.html
@@ -30,7 +30,7 @@
     <link href="assets/fonts/fontello.css" rel="stylesheet">
     
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
+    <link rel="shortcut icon" href="assets/images/moroccanoil_logo.ico">
 </head>
 
 <body>
