--- a/www/inicio.html
+++ b/www/inicio.html
@@ -27,7 +27,7 @@
 		<link href="assets/fonts/fontello.css" rel="stylesheet">
 		
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="assets/images/favicon.ico">
+		<link rel="shortcut icon" href="assets/images/moroccanoil_logo.ico">
 </head>
 
 <body>
