modificaciones 12 de junio v2
Funcionamiento de cookies de inicio de sesion. Registro de usuario realojado.

--- a/www/index.html
+++ b/www/index.html
@@ -87,7 +87,7 @@
 								<li><a href="#productos" class="scroll-to" data-anchor-offset="0">PRODUCTOS</a></li>
 								<li><a href="#estilistas" class="scroll-to" data-anchor-offset="0">ESTILISTAS</a></li>
 								<li><a href="#footer" class="scroll-to" data-anchor-offset="0">CONTACTO</a></li>
-								<li><a href="inicio.php"><span class="glyphicon glyphicon-user"></span> INICIA SESION</a></li>							
+								<li><a href="inicioregistro.php"><span class="glyphicon glyphicon-user"></span> INICIA SESION</a></li>							
 							</ul><!-- /.nav -->
 							
 							<!-- ============================================================= MAIN NAVIGATION : END ============================================================= -->
