--- a/www/contacto.html
+++ b/www/contacto.html
@@ -12,11 +12,13 @@
 		<title>Contacto</title>
 		
 		<!-- Bootstrap Core CSS -->
-		<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		
 		<!-- Customizable CSS -->
 		<link href="assets/css/main.css" rel="stylesheet" data-skrollr-stylesheet>
-		<link href="assets/css/green.css" rel="stylesheet" title="Color">
+		<link href="assets/css/orange.css" rel="stylesheet" title="Color">
 		<link href="assets/css/owl.carousel.css" rel="stylesheet">
 		<link href="assets/css/owl.transitions.css" rel="stylesheet">
 		<link href="assets/css/animate.min.css" rel="stylesheet">
@@ -31,11 +33,6 @@
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="assets/images/moroccanoil_logo.ico">
 		
-		<!-- HTML5 elements and media queries Support for IE8 : HTML5 shim and Respond.js -->
-		<!--[if lt IE 9]>
-			<script src="assets/js/html5shiv.js"></script>
-			<script src="assets/js/respond.min.js"></script>
-		<![endif]-->
 	</head>
 	
 	<body>
@@ -168,11 +165,11 @@
 									<h2>Contacto</h2>
 									<p>Dairy Peña Peluquería & Estética</p>
 									
-									<h3>REEN</h3>
+									<h3>Local&iacutezanos</h3>
 									<ul class="contacts">
 										<li><i class="icon-location contact"></i> Rúa Emilia Pardo Bazán, 3, A Coruña</li>
 										<li><i class="icon-mobile contact"></i>  +34 91 740 7272</li>
-										<li><a href="mailto:info@reen.com"><i class="icon-mail-1 contact"></i> info@mimamimelena.com</a></li>
+										<li><a href="mailto:info@mimamimelena.com"><i class="icon-mail-1 contact"></i> info@mimamimelena.com</a></li>
 									</ul><!-- /.contacts -->
 									
 									<div class="social-network">
